--- a/WebBlazorClient/Properties/launchSettings.json
+++ b/WebBlazorClient/Properties/launchSettings.json
@@ -4,15 +4,15 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:22651",
-      "sslPort": 44333
+      "sslPort": 44336
     }
   },
   "profiles": {
     "WebBlazorClient": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7100;http://localhost:5100",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:44336;http://localhost:22651",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
