--- a/AuthorizationServer/AuthorizationServer.csproj
+++ b/AuthorizationServer/AuthorizationServer.csproj
@@ -7,15 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="IdentityModel" Version="6.1.0-preview.1" />
         <PackageReference Include="IdentityServer4" Version="4.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.2.0" />
         <PackageReference Include="Serilog" Version="2.12.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.1.0-dev-00285" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00896" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Views" />
     </ItemGroup>
 
 </Project>
